--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "dotenv": "^16.1.4",
+    "dotenv-expand": "^10.0.0",
     "vite": "^4.3.2"
+  },
+  "dependencies": {
+    "@vercel/postgres": "^0.3.0"
   }
 }
