--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.3.2"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.3.0"
+    "@vercel/postgres": "^0.3.0",
+    "sortablejs": "^1.15.0"
   }
 }
