--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "vite": "^4.3.2"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.4.14",
     "@vercel/postgres": "^0.3.0",
-    "sortablejs": "^1.15.0"
+    "lodash": "^4.17.21",
+    "pg": "^8.11.0",
+    "sortablejs": "^1.15.0",
+    "ws": "^8.13.0"
   }
 }
