--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.4.14",
+    "@turf/turf": "^6.5.0",
     "@vercel/postgres": "^0.3.0",
     "lodash": "^4.17.21",
     "pg": "^8.11.0",
